tests/fixtures/syntax/valid/file_exists_expectation.repor
case "file exists" {
  $ true
  assert {
    file "out/result.json" exists
  }
}
