tests/fixtures/syntax/invalid/single_line_assert_heredoc_file_text_equals.repor
case "single line assert heredoc file text_equals" {
  $ true
  assert { file <"out/result.json"> text_equals ```
  hello
  ``` }
}
